--- a/.github/workflows/nflwinbot.yml
+++ b/.github/workflows/nflwinbot.yml
@@ -14,6 +14,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@master
       - name: Install rtweet package
+        run: Rscript -e 'install.packages("rtweet", dependencies = TRUE)'
+      - name: Install tidyverse package
+        run: Rscript -e 'install.packages("tidyverse", dependencies = TRUE)'
+      - name: Install espnscrapeR package
         run: Rscript -e 'install.packages("espnscrapeR", dependencies = TRUE)'
       - name: Create and post tweet
         run: Rscript tweet_winprobs.R
