--- a/.github/workflows/nflwinbot.yml
+++ b/.github/workflows/nflwinbot.yml
@@ -13,9 +13,11 @@ jobs:
       TWITTER_CONSUMER_API_SECRET: ${{ secrets.TWITTER_CONSUMER_API_SECRET }}
       TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
       TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+    
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@master
+        id: install-r
       - name: Try espnscrapeR
         run: Rscript download_espnscrapeR.R
       - name: Create and post tweet
