--- a/.github/workflows/nflwinbot.yml
+++ b/.github/workflows/nflwinbot.yml
@@ -4,6 +4,10 @@ on:
   push:
   schedule:
     - cron: '*/5 * * * *'
+  workflow_run:
+    workflows: [nflwinbot]
+    types:
+      - completed
 
 jobs:
   nflwinbot-post:
