--- a/.github/workflows/trigger1.yml
+++ b/.github/workflows/trigger1.yml
@@ -1,28 +1,11 @@
 name: trigger1
 
 on:
-  push:
-  schedule:
-    - cron: '*/5 * * * *'
+  workflow_run:
+    workflows: [nflwinbot]
+    types:
+      - completed
 
 jobs:
   nflwinbot-trigger:
     runs-on: macOS-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      TWITTER_CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
-      TWITTER_CONSUMER_API_SECRET: ${{ secrets.TWITTER_CONSUMER_API_SECRET }}
-      TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-      TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-    
-    steps:
-      - uses: actions/checkout@v2
-      
-      - uses: r-lib/actions/setup-r@v1
-        id: install-r
-
-      - name: Install pak and query dependencies
-        run: |
-          install.packages("pak", repos = "https://r-lib.github.io/p/pak/dev/")
-          saveRDS(pak::pkg_deps("local::.", dependencies = TRUE), ".github/r-depends.rds")
-        shell: Rscript {0}
